--- a/order-api/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/order-api/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,17 +1,32 @@
 {"properties": [
   {
-    "name": "spring.kafka.topic.name",
-    "type": "java.lang.String",
-    "description": "A description for 'spring.kafka.topic.name'"
-  },
-  {
     "name": "organization.name",
     "type": "java.lang.String",
     "description": "A description for 'organization.name'"
   },
   {
+    "name": "emailapi.ribbon.listOfServers",
+    "type": "java.lang.String",
+    "description": "A description for 'emailapi.ribbon.listOfServers'"
+  },
+  {
     "name": "service.welcome.message",
     "type": "java.lang.String",
     "description": "A description for 'service.welcome.message'"
+  },
+  {
+    "name": "spring.kafka.topic.name",
+    "type": "java.lang.String",
+    "description": "A description for 'spring.kafka.topic.name'"
+  },
+  {
+    "name": "emailapi.ribbon.ServerListRefreshInterval",
+    "type": "java.lang.String",
+    "description": "A description for 'emailapi.ribbon.ServerListRefreshInterval'"
+  },
+  {
+    "name": "emailapi.ribbon.eureka.enabled",
+    "type": "java.lang.String",
+    "description": "A description for 'emailapi.ribbon.eureka.enabled'"
   }
 ]}
