--- a/order-api/src/main/resources/application.properties
+++ b/order-api/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.kafka.producer.bootstrap-servers:localhost:9092
 spring.kafka.producer.key-serializer:org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer:org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.topic.name: order_topics
+emailapi.ribbon.eureka.enabled:false
+emailapi.ribbon.listOfServers: localhost:8081,localhost:8082,localhost:8083
+emailapi.ribbon.ServerListRefreshInterval: 2000
