--- a/courseCatalouge/src/main/resources/application.properties
+++ b/courseCatalouge/src/main/resources/application.properties
@@ -5,3 +5,6 @@ eureka.client.fetch-registry=true
 spring.security.oauth2.client.registration.github.client-id=Ov23liiIncMsEh1xJehd
 spring.security.oauth2.client.registration.github.client-secret=ba5a77cd1e1439cd3e9a88dba15637e9d5411dd6
 spring.zipkin.base-url=http://localhost:9411/
+#eureka.instance.preferIpAddress=true
+eureka.instance.hostname=localhost
+eureka.instance.ip-address=127.0.0.1
