--- a/eurekaserver/src/main/resources/application.properties
+++ b/eurekaserver/src/main/resources/application.properties
@@ -2,3 +2,5 @@ server.port=8761
 spring.application.name=springimplant-discovery-server
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+eureka.instance.hostname=localhost
+eureka.instance.preferIpAddress=true
