--- a/user-api/src/main/resources/application.properties
+++ b/user-api/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.datasource.driver-class-name=org.sqlite.JDBC
 spring.application.name=springimplant-user-api
 server.port=8003
 eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+#eureka.instance.preferIpAddress=true
+eureka.instance.hostname=localhost
+eureka.instance.ip-address=127.0.0.1
