--- a/user-api/src/main/resources/application.properties
+++ b/user-api/src/main/resources/application.properties
@@ -13,3 +13,16 @@ eureka.client.fetch-registry=true
 #eureka.instance.preferIpAddress=true
 eureka.instance.hostname=localhost
 eureka.instance.ip-address=127.0.0.1
+management.health.circuitbreakers.enabled=true
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=health
+
+resilience4j.circuitbreaker.instances.springimplant-user-api.register-health-indicator=true
+resilience4j.circuitbreaker.instances.springimplant-user-api.event-consumer-buffer-size=10
+resilience4j.circuitbreaker.instances.springimplant-user-api.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.springimplant-user-api.minimum-number-of-calls=5
+resilience4j.circuitbreaker.instances.springimplant-user-api.automatic-transition-from-open-to-half-open-enabled=true
+resilience4j.circuitbreaker.instances.springimplant-user-api.wait-duration-in-open-state=5s
+resilience4j.circuitbreaker.instances.springimplant-user-api.permitted-number-of-calls-in-half-open-state=3
+resilience4j.circuitbreaker.instances.springimplant-user-api.sliding-window-size=10
+resilience4j.circuitbreaker.instances.springimplant-user-api.sliding-window-type=count-based
