--- a/user-api/src/main/resources/application.properties
+++ b/user-api/src/main/resources/application.properties
@@ -17,12 +17,12 @@ management.health.circuitbreakers.enabled=true
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=health
 
-resilience4j.circuitbreaker.instances.springimplant-user-api.register-health-indicator=true
-resilience4j.circuitbreaker.instances.springimplant-user-api.event-consumer-buffer-size=10
-resilience4j.circuitbreaker.instances.springimplant-user-api.failure-rate-threshold=50
-resilience4j.circuitbreaker.instances.springimplant-user-api.minimum-number-of-calls=5
-resilience4j.circuitbreaker.instances.springimplant-user-api.automatic-transition-from-open-to-half-open-enabled=true
-resilience4j.circuitbreaker.instances.springimplant-user-api.wait-duration-in-open-state=5s
-resilience4j.circuitbreaker.instances.springimplant-user-api.permitted-number-of-calls-in-half-open-state=3
-resilience4j.circuitbreaker.instances.springimplant-user-api.sliding-window-size=10
-resilience4j.circuitbreaker.instances.springimplant-user-api.sliding-window-type=count-based
+resilience4j.circuitbreaker.instances.courseService.register-health-indicator=true
+resilience4j.circuitbreaker.instances.courseService.event-consumer-buffer-size=10
+resilience4j.circuitbreaker.instances.courseService.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.courseService.minimum-number-of-calls=5
+resilience4j.circuitbreaker.instances.courseService.automatic-transition-from-open-to-half-open-enabled=true
+resilience4j.circuitbreaker.instances.courseService.wait-duration-in-open-state=5s
+resilience4j.circuitbreaker.instances.courseService.permitted-number-of-calls-in-half-open-state=3
+resilience4j.circuitbreaker.instances.courseService.sliding-window-size=10
+resilience4j.circuitbreaker.instances.courseService.sliding-window-type=count-based
