--- a/voting-system/pom.xml
+++ b/voting-system/pom.xml
@@ -107,6 +107,12 @@
 			<groupId>com.hazelcast</groupId>
 			<artifactId>hazelcast</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.hazelcast/hazelcast-all -->
+		<dependency>
+			<groupId>com.hazelcast</groupId>
+			<artifactId>hazelcast-all</artifactId>
+			<version>4.2.8</version>
+		</dependency>
 	</dependencies>
 
 	<build>
