--- a/voting-system/src/main/resources/hazelcast.yaml
+++ b/voting-system/src/main/resources/hazelcast.yaml
@@ -3,3 +3,11 @@ hazelcast:
     join:
       multicast:
         enabled: true
+  map:
+    default:
+     time-to-live-seconds: 60
+     max-idle-seconds: 60
+     eviction:
+      eviction-policy: LRU
+      max-size-policy: PER_NODE
+      size: 5000
