--- a/stockapi/src/main/resources/application.properties
+++ b/stockapi/src/main/resources/application.properties
@@ -7,3 +7,9 @@ spring.kafka.consumer.key-deserializer:org.apache.kafka.common.serialization.Str
 spring.kafka.consumer.value-deserializer:org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 spring.kafka.topic.name=order_topics
+server.ssl.key-alias=client
+server.ssl.key-password=changeit
+server.ssl.key-store=classpath:client
+server.ssl.key-store-provider=SUN
+server.ssl.key-store-type=JKS
+server.ssl.client-auth=want
