--- a/complaintsystem/src/main/resources/database-properties.properties
+++ b/complaintsystem/src/main/resources/database-properties.properties
@@ -2,6 +2,6 @@ jdbc.driverClassName=com.mysql.cj.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/complaintSystem
 jdbc.user=root
 jdbc.pass=root@04G
-hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.show_sql=true
 hibernate.hdm2ddl.auto=update
