--- a/gatewayservice/src/main/resources/application.properties
+++ b/gatewayservice/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.application.name=springimplant-gateway-service
 server.port= 8001
 eureka.client.register-with-eureka=true
+zuul.routes.voting-system.path=/vote-api/**
+zuul.routes.voting-system.url=http://localhost:8081
+zuul.routes.springimplant-user-api.path=/user-api/**
+zuul.routes.springimplant-user-api.url=http://localhost:8003/**
