--- a/spring-cloud-function-example/pom.xml
+++ b/spring-cloud-function-example/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.3</version>
+		<version>2.3.1.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.springimplant.cloudfunction</groupId>
@@ -15,8 +15,8 @@
 	<name>spring-cloud-function-example</name>
 	<description>Spring Cloud Function Example</description>
 	<properties>
-		<java.version>17</java.version>
-		<spring-cloud.version>Greenwich.SR2</spring-cloud.version>
+		<java.version>1.8</java.version>
+		<spring-cloud.version>Hoxton.SR6</spring-cloud.version>
 	</properties>
 	<dependencies>
 		<!--
