updated userapi with multiple databases integration

--- a/user-api/src/main/resources/application.properties
+++ b/user-api/src/main/resources/application.properties
@@ -1,10 +1,18 @@
 spring.jpa.database-platform=org.hibernate.dialect.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
-spring.datasource.url=jdbc:sqlite:user.db
-spring.datasource.username=
-spring.datasource.password=
-spring.datasource.driver-class-name=org.sqlite.JDBC
+
+# SQLite Configuration
+spring.datasource.sqlite.jdbc-url=jdbc:sqlite:user.db
+spring.datasource.sqlite.username=
+spring.datasource.sqlite.password=
+spring.datasource.sqlite.driver-class-name=org.sqlite.JDBC
+
+# PostgreSQL Configuration
+spring.datasource.postgres.jdbc-url=jdbc:postgresql://localhost:5432/users
+spring.datasource.postgres.username=postgres
+spring.datasource.postgres.password=postgres
+spring.datasource.postgres.driver-class-name=org.postgresql.Driver
 
 spring.application.name=springimplant-user-api
 server.port=8003
