--- a/order-api/src/main/resources/application.properties
+++ b/order-api/src/main/resources/application.properties
@@ -1,5 +1,13 @@
-server.port=8003
+server.port=8002
 spring.application.name=springimplant-order-service
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/orders
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 organization.name=Spring Implant Application
 service.welcome.message=Welcome to Order Service from internal properties
 spring.kafka.producer.bootstrap-servers:localhost:9092
