--- a/user-api/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/user-api/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -38,5 +38,10 @@
     "name": "spring.datasource.postgres.driver-class-name",
     "type": "java.lang.String",
     "description": "A description for 'spring.datasource.postgres.driver-class-name'"
+  },
+  {
+    "name": "spring.datasource.postgres.jdbc-url",
+    "type": "java.lang.String",
+    "description": "A description for 'spring.datasource.postgres.jdbc-url'"
   }
 ]}
