--- a/user-api/src/main/resources/application.properties
+++ b/user-api/src/main/resources/application.properties
@@ -18,9 +18,11 @@ spring.application.name=springimplant-user-api
 server.port=8003
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-#eureka.instance.preferIpAddress=true
+eureka.client.service-url.defaultZone= http://localhost:8761/eureka
+eureka.instance.preferIpAddress=true
 eureka.instance.hostname=localhost
 eureka.instance.ip-address=127.0.0.1
+
 management.health.circuitbreakers.enabled=true
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=health
