Updated Spring Version,Cloud Version and Sqllite Hibernate Dialect

--- a/order-api/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/order-api/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -28,5 +28,15 @@
     "name": "emailapi.ribbon.eureka.enabled",
     "type": "java.lang.String",
     "description": "A description for 'emailapi.ribbon.eureka.enabled'"
+  },
+  {
+    "name": "emailapi.ribbon.ServerListRefreshInterval",
+    "type": "java.lang.String",
+    "description": "A description for 'emailapi.ribbon.ServerListRefreshInterval'"
+  },
+  {
+    "name": "emailapi.ribbon.ServerListRefreshInterval",
+    "type": "java.lang.String",
+    "description": "A description for 'emailapi.ribbon.ServerListRefreshInterval'"
   }
 ]}
