--- a/user-api/src/main/resources/application.properties
+++ b/user-api/src/main/resources/application.properties
@@ -16,8 +16,8 @@ spring.datasource.postgres.driver-class-name=org.postgresql.Driver
 
 spring.application.name=springimplant-user-api
 server.port=8003
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
 eureka.client.service-url.defaultZone= http://localhost:8761/eureka
 eureka.instance.preferIpAddress=true
 eureka.instance.hostname=localhost
