--- a/currency-service/src/main/resources/application.properties
+++ b/currency-service/src/main/resources/application.properties
@@ -3,8 +3,8 @@ management.server.port=8009
 management.endpoint.health.show-details=always
 management.endpoints.web.exposure.include=beans,mappings,sessions,health
 spring.application.name=springimplant-currency-service
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
 spring.security.oauth2.client.registration.github.client-id=Ov23liiIncMsEh1xJehd
 spring.security.oauth2.client.registration.github.client-secret=ba5a77cd1e1439cd3e9a88dba15637e9d5411dd6
 spring.security.oauth2.client.registration.google.client-id=373941589680-kd77o1e9d47c6dbosrhghgfhgfhnseb2bdqhl05455jbggf7.apps.googleusercontent.com
@@ -30,3 +30,8 @@ spring.kafka.consumer.properties.spring.json.type.mapping=partner:com.springimpl
 kafka.health.indicator.timeout.ms=100
 
 spring.cloud.config.uri=http://localhost:8888
+
+# Ldap Properties
+#spring.ldap.embedded.port=8389
+#spring.ldap.embedded.ldif=classpath:ldap-data.ldif
+#spring.ldap.embedded.base-dn=dc=springframework,dc=org
