--- a/rating-service/src/main/resources/application.properties
+++ b/rating-service/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 # Ldap Properties
-spring.ldap.embedded.port=8388
-spring.ldap.embedded.ldif=classpath:ldap-data.ldif
+#spring.ldap.embedded.ldif=classpath:ldap-data.ldif
+#spring.ldap.embedded.base-dn=dc=springframework,dc=org
+#spring.ldap.embedded.port=8389
 spring.ldap.embedded.base-dn=dc=springframework,dc=org
+spring.ldap.embedded.ldif=classpath:ldap-data.ldif
+spring.ldap.embedded.port=8399
+spring.ldap.embedded.url=ldap://localhost:8399/
