--- a/gatewayservice/src/main/resources/application.properties
+++ b/gatewayservice/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=springimplant-gateway-service
 server.port= 8765
 eureka.client.register-with-eureka=true
 zuul.routes.voting-system.path=/vote-api/**
-zuul.routes.voting-system.url=http://localhost:8082
+zuul.routes.voting-system.url=http://localhost:8082/**
 zuul.routes.springimplant-user-api.path=/user-api/**
 zuul.routes.springimplant-user-api.url=http://localhost:8003/**
 
