update gateway for service discovery

--- a/gatewayservice/src/main/resources/application.properties
+++ b/gatewayservice/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.main.web-application-type=reactive
 spring.application.name=springimplant-gateway-service
 server.port= 8765
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
 zuul.routes.voting-system.path=/vote-api/**
 zuul.routes.voting-system.url=http://localhost:8082/**
