--- a/gatewayservice/src/main/resources/application.properties
+++ b/gatewayservice/src/main/resources/application.properties
@@ -8,6 +8,8 @@ zuul.routes.voting-system.url=http://localhost:8082/**
 zuul.routes.springimplant-user-api.path=/user-api/**
 zuul.routes.springimplant-user-api.url=http://localhost:8003/**
 
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=ALWAYS
 
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
