--- a/gatewayservice/src/main/resources/application.properties
+++ b/gatewayservice/src/main/resources/application.properties
@@ -4,9 +4,10 @@ server.port= 8765
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
 zuul.routes.voting-system.path=/vote-api/**
-zuul.routes.voting-system.url=http://localhost:8082/**
+zuul.routes.voting-system.service-id=vote-system
+zuul.routes.voting-system.strip-prefix=true
 zuul.routes.springimplant-user-api.path=/user-api/**
-zuul.routes.springimplant-user-api.url=http://localhost:8003/**
+zuul.routes.springimplant-user-api.url=http://localhost:8003/
 
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=ALWAYS
