--- a/user-api/src/main/resources/application.properties
+++ b/user-api/src/main/resources/application.properties
@@ -17,8 +17,8 @@ spring.datasource.postgres.username=postgres
 spring.datasource.postgres.password=postgres
 spring.datasource.postgres.driver-class-name=org.postgresql.Driver
 
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone= http://localhost:8761/eureka
 eureka.instance.preferIpAddress=true
 eureka.instance.hostname=localhost
