added timeout configuration

--- a/gatewayservice/src/main/resources/application.properties
+++ b/gatewayservice/src/main/resources/application.properties
@@ -3,8 +3,12 @@ spring.application.name=springimplant-gateway-service
 server.port= 8765
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.client.register-with-eureka=true
+
+zuul.host.connect-timeout-millis=60000
+zuul.host.socket-timeout-millis=60000
+zuul.ignored-services=*
 zuul.routes.voting-system.path=/vote-api/**
-zuul.routes.voting-system.service-id=VOTING-SYSTEM
+zuul.routes.voting-system.service-id=voting-system
 zuul.routes.voting-system.strip-prefix=true
 zuul.routes.springimplant-user-api.path=/user-api/**
 zuul.routes.springimplant-user-api.service-id=springimplant-user-api
